k3s-userapps/trmnl-cyberpunk/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: trmnl-cyberpunk
  namespace: trmnl-cyberpunk
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/pod: trmnl-cyberpunk
  type: ClusterIP
